--- a/joyrun/uwsgi.ini
+++ b/joyrun/uwsgi.ini
@@ -10,3 +10,4 @@ module=joyrun.wsgi
 wsgi-file=/home/apps/PYthon_Public/joyrun/joyrun/wsgi.py
 static-map=/static=static
 #stats=127.0.0.1:9000
+py-autoreload=1
