--- a/joyrun/Pipfile
+++ b/joyrun/Pipfile
@@ -14,6 +14,7 @@ robotframework-databaselibrary = "*"
 pymysql = "*"
 jsonpointer = "*"
 uwsgi = "*"
+django-crontab = "*"
 
 [requires]
 python_version = "3.6"
